--- a/pu.pornaboot/src/main/resources/static/css/main.css
+++ b/pu.pornaboot/src/main/resources/static/css/main.css
@@ -9,7 +9,7 @@ body
 {
 /** Vroeger font-family: "Tahoma", "Arial", sans-serif;*/
 	font-family: "Trebuchet MS", verdana, arial, helvetica, sans-serif;
-	font-size: 11px; /* 11 voor de Trebuchet, 12 voor Tahoma */
+	font-size: 13px;
 	color: #000;
 }
 h1
@@ -30,11 +30,19 @@ pre
 .paginator a
 {
     color: black;
-    padding: 8px 16px;
+    padding: 4px 8px;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    border-right: 1px solid grey;
     text-decoration: none;
     transition: background-color .3s;
     float: left;
     font-size: 120%;
+}
+.paginator a.left
+{
+    border-left: 1px solid grey;
+	
 }
 .paginator a.active
 {
@@ -75,16 +83,16 @@ table.sortable thead tr .headerSortDown, table.sortable thead tr .headerSortUp {
     background-color: #0090ff;	
 }
 table.sortable thead tr .header {
-    background-image: url(/porna/images/bg.gif);
+    background-image: url(/images/bg.gif);
     background-repeat: no-repeat;
     background-position: center right;
     cursor: pointer;
 }
 table.sortable thead tr .headerSortDown {
-    background-image: url(/porna/images/desc.gif);
+    background-image: url(/images/desc.gif);
 }
 table.sortable thead tr .headerSortUp {
-    background-image: url(/porna/images/asc.gif);
+    background-image: url(/images/asc.gif);
 }
 table.sortable {
 	text-align: left;
@@ -93,7 +101,7 @@ table.sortable {
 td
 {
 	text-align: right;
-	font-size: 11px;
+	font-size: 13px;
 	padding: 3px 8px;
 	border-left: 1px solid #D9D9D9;
 }
