--- a/pu.pornaboot/src/main/resources/static/css/main.css
+++ b/pu.pornaboot/src/main/resources/static/css/main.css
@@ -23,6 +23,20 @@ pre
 	border: 1px solid #666666;
 }
 
+.checkbox {
+  column-count: 4;
+}
+
+/*
+.checkbox input
+{
+	float:left;
+}
+.checkbox label
+{
+	float:left;
+}
+*/
 .paginator
 {
     display: inline-block;
@@ -100,7 +114,7 @@ table.sortable {
 
 td
 {
-	text-align: right;
+	text-align: left;
 	font-size: 13px;
 	padding: 3px 8px;
 	border-left: 1px solid #D9D9D9;
